由于tf不再提供2.10.1下载，无法在win调用GPU，尽可能删减所有tf包，主要kears替代

--- a/机器学习笔记/10_Keras人工神经网络.ipynb
+++ b/机器学习笔记/10_Keras人工神经网络.ipynb
@@ -7,31 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tensorflow as tf\n",
-    "from tensorflow import keras"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "c58f2093-742d-4f25-b75f-adb6baa55569",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2.7.0'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tf.__version__"
+    "import keras"
    ]
   },
   {
@@ -1229,8 +1205,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.random.seed(42)\n",
-    "tf.random.set_seed(42)"
+    "np.random.seed(42)"
    ]
   },
   {
