--- a/机器学习笔记/14_CNN深度计算机视觉.ipynb
+++ b/机器学习笔记/14_CNN深度计算机视觉.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "import tensorflow as tf\n",
     "import numpy as np\n",
-    "from tensorflow import keras\n",
+    "import keras\n",
     "from sklearn.datasets import load_sample_image\n",
     "import matplotlib.pyplot as plt"
    ]
