--- a/机器学习笔记/15_RNN和CNN处理序列.ipynb
+++ b/机器学习笔记/15_RNN和CNN处理序列.ipynb
@@ -45,8 +45,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import tensorflow as tf\n",
-    "from tensorflow import keras"
+    "import keras"
    ]
   },
   {
@@ -705,7 +704,6 @@
    ],
    "source": [
     "np.random.seed(42)\n",
-    "tf.random.set_seed(42)\n",
     "\n",
     "model = keras.models.Sequential([\n",
     "    keras.layers.SimpleRNN(20, return_sequences=True, input_shape=[None, 1]),\n",
