--- a/机器学习笔记/16_使用RNN进行自然语言处理.ipynb
+++ b/机器学习笔记/16_使用RNN进行自然语言处理.ipynb
@@ -7,8 +7,7 @@
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
-    "from tensorflow import keras\n",
-    "import pandas as pd\n",
+    "import keras\n",
     "import numpy as np"
    ]
   },
@@ -48,7 +47,7 @@
    "outputs": [],
    "source": [
     "shakespeare_url = \"https://homl.info/shakespeare\"  # shortcut URL\n",
-    "filepath = tf.keras.utils.get_file(\"shakespeare.txt\", shakespeare_url)\n",
+    "filepath = keras.utils.get_file(\"shakespeare.txt\", shakespeare_url)\n",
     "with open(filepath) as f:\n",
     "    shakespeare_text = f.read()"
    ]
@@ -280,7 +279,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_vec_layer = tf.keras.layers.TextVectorization(split=\"character\",\n",
+    "text_vec_layer = keras.layers.TextVectorization(split=\"character\",\n",
     "                                                   standardize=\"lower\")\n",
     "# 将不同长度的文本转换成相同长度的数组\n",
     "text_vec_layer.adapt([shakespeare_text])\n",
@@ -361,7 +360,6 @@
    "outputs": [],
    "source": [
     "length = 100\n",
-    "tf.random.set_seed(42)\n",
     "train_set = to_dataset(encoded[:1_000_000], length=length, shuffle=True,\n",
     "                       seed=42)\n",
     "valid_set = to_dataset(encoded[1_000_000:1_060_000], length=length)\n",
@@ -382,15 +380,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tf.random.set_seed(42)  # extra code – ensures reproducibility on CPU\n",
-    "model = tf.keras.Sequential([\n",
-    "    tf.keras.layers.Embedding(input_dim=n_tokens, output_dim=16),\n",
-    "    tf.keras.layers.GRU(128, return_sequences=True),\n",
-    "    tf.keras.layers.Dense(n_tokens, activation=\"softmax\")\n",
+    "model = keras.Sequential([\n",
+    "    keras.layers.Embedding(input_dim=n_tokens, output_dim=16),\n",
+    "    keras.layers.GRU(128, return_sequences=True),\n",
+    "    keras.layers.Dense(n_tokens, activation=\"softmax\")\n",
     "])\n",
     "model.compile(loss=\"sparse_categorical_crossentropy\", optimizer=\"nadam\",\n",
     "              metrics=[\"accuracy\"])\n",
-    "model_ckpt = tf.keras.callbacks.ModelCheckpoint(\n",
+    "model_ckpt = keras.callbacks.ModelCheckpoint(\n",
     "    \"my_shakespeare_model\", monitor=\"val_accuracy\", save_best_only=True)\n",
     "history = model.fit(train_set, validation_data=valid_set, epochs=10,\n",
     "                    callbacks=[model_ckpt])"
@@ -413,9 +410,9 @@
     "from pathlib import Path\n",
     "# 下载一个现成模型\n",
     "url = \"https://github.com/ageron/data/raw/main/shakespeare_model.tgz\"\n",
-    "path = tf.keras.utils.get_file(\"shakespeare_model.tgz\", url, extract=True)\n",
+    "path = keras.utils.get_file(\"shakespeare_model.tgz\", url, extract=True)\n",
     "model_path = Path(path).with_name(\"shakespeare_model\")\n",
-    "shakespeare_model = tf.keras.models.load_model(model_path)"
+    "shakespeare_model = keras.models.load_model(model_path)"
    ]
   },
   {
@@ -782,12 +779,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tf.random.set_seed(42)  # extra code – ensures reproducibility on CPU\n",
-    "model = tf.keras.Sequential([\n",
-    "    tf.keras.layers.Embedding(input_dim=n_tokens, output_dim=16,\n",
+    "model = keras.Sequential([\n",
+    "    keras.layers.Embedding(input_dim=n_tokens, output_dim=16,\n",
     "                              batch_input_shape=[1, None]),\n",
-    "    tf.keras.layers.GRU(128, return_sequences=True, stateful=True),\n",
-    "    tf.keras.layers.Dense(n_tokens, activation=\"softmax\")\n",
+    "    keras.layers.GRU(128, return_sequences=True, stateful=True),\n",
+    "    keras.layers.Dense(n_tokens, activation=\"softmax\")\n",
     "])"
    ]
   },
