--- a/机器学习笔记/11_训练深度神经网络.ipynb
+++ b/机器学习笔记/11_训练深度神经网络.ipynb
@@ -12,8 +12,7 @@
    },
    "outputs": [],
    "source": [
-    "import tensorflow as tf\n",
-    "from tensorflow import keras\n",
+    "import keras\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import os\n",
@@ -785,7 +784,6 @@
    },
    "outputs": [],
    "source": [
-    "tf.random.set_seed(42)\n",
     "np.random.seed(42)\n",
     "\n",
     "model_A = keras.models.Sequential()\n",
