--- a/机器学习笔记/13_使用TF加载和预处理数据.ipynb
+++ b/机器学习笔记/13_使用TF加载和预处理数据.ipynb
@@ -20,9 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tensorflow as tf\n",
-    "from tensorflow import keras\n",
-    "import numpy as np"
+    "import tensorflow as tf"
    ]
   },
   {
