--- a/机器学习笔记/17_自动编码器和GAN表征生成学习.ipynb
+++ b/机器学习笔记/17_自动编码器和GAN表征生成学习.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
-    "from tensorflow import keras\n",
+    "import keras\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np"
