--- a/强化学习笔记/19_多智能体.ipynb
+++ b/强化学习笔记/19_多智能体.ipynb
@@ -58,6 +58,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 仅避免警告，无意义\n",
+    "env = []\n",
+    "simple_adversary_v3 = []"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -205,7 +216,7 @@
     "    def take_action(self, states, explore):\n",
     "        states = [\n",
     "            torch.tensor([states[i]], dtype=torch.float, device=self.device)\n",
-    "            for i in env.agents  # 未写环境导致的警告\n",
+    "            for i in env.agents  # 未写环境可能导致警告\n",
     "        ]\n",
     "        \n",
     "        #  注意：这里的agent.take_action是DDPG算法中的\n",
