--- a/机器学习笔记/18_强化学习.ipynb
+++ b/机器学习笔记/18_强化学习.ipynb
@@ -19,6 +19,7 @@
     "import gymnasium as gym\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "import tensorflow as tf\n",
     "\n",
     "plt.rcParams[\"font.sans-serif\"] = [\"Microsoft YaHei\"]"
    ]
@@ -284,8 +285,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tensorflow as tf\n",
-    "from tensorflow import keras"
+    "import keras"
    ]
   },
   {
@@ -1085,8 +1085,7 @@
     }
    ],
    "source": [
-    "import tensorflow as tf\n",
-    "from tensorflow import keras\n",
+    "import keras\n",
     "import numpy as np\n",
     "import gymnasium as gym\n",
     "import matplotlib.pyplot as plt\n",
@@ -1109,16 +1108,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tf.random.set_seed(42)  # extra code – ensures reproducibility on the CPU\n",
-    "\n",
     "input_shape = [4]  # == env.observation_space.shape\n",
     "n_outputs = 2  # == env.action_space.n\n",
     "\n",
-    "model = tf.keras.Sequential(\n",
+    "model = keras.Sequential(\n",
     "    [\n",
-    "        tf.keras.layers.Dense(32, activation=\"elu\", input_shape=input_shape),\n",
-    "        tf.keras.layers.Dense(32, activation=\"elu\"),\n",
-    "        tf.keras.layers.Dense(n_outputs),\n",
+    "        keras.layers.Dense(32, activation=\"elu\", input_shape=input_shape),\n",
+    "        keras.layers.Dense(32, activation=\"elu\"),\n",
+    "        keras.layers.Dense(n_outputs),\n",
     "    ]\n",
     ")\n"
    ]
@@ -1228,8 +1225,8 @@
     "\n",
     "batch_size = 64\n",
     "discount_factor = 0.95\n",
-    "optimizer = tf.keras.optimizers.Nadam(learning_rate=1e-2)  # 优化器\n",
-    "loss_fn = tf.keras.losses.mean_squared_error  # 损失函数mse"
+    "optimizer = keras.optimizers.Nadam(learning_rate=1e-2)  # 优化器\n",
+    "loss_fn = keras.losses.mean_squared_error  # 损失函数mse"
    ]
   },
   {
@@ -1421,11 +1418,11 @@
     "input_shape = [4]  # == env.observation_space.shape\n",
     "n_outputs = 2  # == env.action_space.n\n",
     "\n",
-    "model = tf.keras.Sequential(\n",
+    "model = keras.Sequential(\n",
     "    [\n",
-    "        tf.keras.layers.Dense(32, activation=\"elu\", input_shape=input_shape),\n",
-    "        tf.keras.layers.Dense(32, activation=\"elu\"),\n",
-    "        tf.keras.layers.Dense(n_outputs),\n",
+    "        keras.layers.Dense(32, activation=\"elu\", input_shape=input_shape),\n",
+    "        keras.layers.Dense(32, activation=\"elu\"),\n",
+    "        keras.layers.Dense(n_outputs),\n",
     "    ]\n",
     ")\n",
     "# 初始化\n",
@@ -1438,8 +1435,8 @@
     "\n",
     "batch_size = 32\n",
     "discount_factor = 0.95\n",
-    "optimizer = tf.keras.optimizers.Nadam(learning_rate=1e-2)  # 优化器\n",
-    "loss_fn = tf.keras.losses.mean_squared_error  # 损失函数mse"
+    "optimizer = keras.optimizers.Nadam(learning_rate=1e-2)  # 优化器\n",
+    "loss_fn = keras.losses.mean_squared_error  # 损失函数mse"
    ]
   },
   {
@@ -1459,7 +1456,7 @@
    "outputs": [],
    "source": [
     "##### 克隆一个模型 ######\n",
-    "target = tf.keras.models.clone_model(model)  # 复制一个新的模型（初始状态一致）\n",
+    "target = keras.models.clone_model(model)  # 复制一个新的模型（初始状态一致）\n",
     "target.set_weights(model.get_weights())  # 应用权重\n",
     "#######################\n",
     "\n",
@@ -1659,15 +1656,15 @@
    "source": [
     "tf.random.set_seed(42)  # extra code – ensures reproducibility on the CPU\n",
     "\n",
-    "input_states = tf.keras.layers.Input(shape=[4])\n",
-    "hidden1 = tf.keras.layers.Dense(32, activation=\"elu\")(input_states)\n",
-    "hidden2 = tf.keras.layers.Dense(32, activation=\"elu\")(hidden1)\n",
-    "state_values = tf.keras.layers.Dense(1)(hidden2) # V，状态价值\n",
-    "raw_advantages = tf.keras.layers.Dense(n_outputs)(hidden2) # 原始A\n",
+    "input_states = keras.layers.Input(shape=[4])\n",
+    "hidden1 = keras.layers.Dense(32, activation=\"elu\")(input_states)\n",
+    "hidden2 = keras.layers.Dense(32, activation=\"elu\")(hidden1)\n",
+    "state_values = keras.layers.Dense(1)(hidden2) # V，状态价值\n",
+    "raw_advantages = keras.layers.Dense(n_outputs)(hidden2) # 原始A\n",
     "advantages = raw_advantages - tf.reduce_max(raw_advantages, axis=1, keepdims=True) \n",
     "# A，相对于之前最好的动作的动作优势\n",
     "Q_values = state_values + advantages\n",
-    "model = tf.keras.Model(inputs=[input_states], outputs=[Q_values])"
+    "model = keras.Model(inputs=[input_states], outputs=[Q_values])"
    ]
   },
   {
