--- a/机器学习笔记/X_02_草稿.ipynb
+++ b/机器学习笔记/X_02_草稿.ipynb
@@ -104,6 +104,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.return_types.sort(\n",
+       "values=tensor([0.0970, 0.2764, 0.4207, 0.4482, 0.4954, 0.7378, 0.8313, 0.8407, 0.9138,\n",
+       "        0.9701]),\n",
+       "indices=tensor([1, 5, 3, 6, 8, 7, 2, 4, 0, 9]))"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "\n",
+    "torch.sort(torch.rand(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
