--- a/强化学习笔记/12_PPO.ipynb
+++ b/强化学习笔记/12_PPO.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {
     "notebookRunGroups": {
      "groupValue": "12"
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {
     "notebookRunGroups": {
      "groupValue": "1"
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {
     "notebookRunGroups": {
      "groupValue": "1"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {
     "notebookRunGroups": {
      "groupValue": "1"
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {
     "notebookRunGroups": {
      "groupValue": "1"
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {
     "notebookRunGroups": {
      "groupValue": "1"
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {
     "notebookRunGroups": {
      "groupValue": "1"
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {
     "notebookRunGroups": {
      "groupValue": "1"
@@ -353,7 +353,7 @@
    },
    "outputs": [],
    "source": [
-    "CKP_PATH = 'checkpoints/debug/PPO_CPv1.pt'\n",
+    "CKP_PATH = 'checkpoints/PPO_CPv1.pt'\n",
     "s_epoch, s_episode, return_list = read_ckp(CKP_PATH)"
    ]
   },
