--- a/强化学习笔记/18_目标导向强化学习.ipynb
+++ b/强化学习笔记/18_目标导向强化学习.ipynb
@@ -372,7 +372,7 @@
     "# 重要发现\n",
     "\n",
     "对于DDPG算法中的take_action函数\n",
-    "```\n",
+    "```python\n",
     "def take_action(self, state):\n",
     "    state = torch.tensor(state[np.newaxis, :], dtype=torch.float).to(self.device)\n",
     "    action = self.actor(state).detach().cpu().numpy()[0]  # * 动作是数组, 用.detach()把action分离出计算图\n",
