--- a/强化学习笔记/19_多智能体.ipynb
+++ b/强化学习笔记/19_多智能体.ipynb
@@ -89,7 +89,7 @@
     "        np.random.choice(range(logits.shape[1]), size=logits.shape[0])\n",
     "    ]],\n",
     "                                       requires_grad=False).to(logits.device)\n",
-    "    # 通过epsilon-贪婪算法来选择用哪个动作，r是\n",
+    "    # 通过epsilon-贪婪算法来选择用哪个动作\n",
     "    return torch.stack([\n",
     "        argmax_acs[i] if r > eps else rand_acs[i]\n",
     "        for i, r in enumerate(torch.rand(logits.shape[0]))\n",
@@ -165,7 +165,7 @@
     "\n",
     "    def take_action(self, state, explore=False):\n",
     "        action = self.actor(state)\n",
-    "        if explore:  # *探索时，需要训练模型，gumbel_softmax可以反向传播\n",
+    "        if explore:  # * 探索时，需要训练模型，gumbel_softmax可以反向传播\n",
     "            action = gumbel_softmax(action)\n",
     "        else:  # * 应用时，不需要训练模型，onehot_from_logits直接把连续动作离散，\n",
     "               # * 无法反向传播，但是返回的结果只比gumbel_softmax少一个噪声，差别不大\n",
@@ -230,11 +230,13 @@
     "        cur_agent = self.agents[i_agent]\n",
     "\n",
     "        cur_agent.critic_optimizer.zero_grad()\n",
+    "        # 生成所有目标agent策略的动作\n",
     "        all_target_act = [\n",
     "            onehot_from_logits(pi(_next_obs))\n",
     "            for pi, _next_obs in zip(self.target_policies, next_obs)\n",
     "        ]\n",
-    "        target_critic_input = torch.cat((*next_obs, *all_target_act), dim=1)\n",
+    "        \n",
+    "        target_critic_input = torch.cat((*next_obs, *all_target_act), dim=1)  # 拼接所有观测和目标agent动作\n",
     "        target_critic_value = rew[i_agent].view(-1, 1) + self.gamma * cur_agent.target_critic(\n",
     "                target_critic_input) * (1 - done[i_agent].view(-1, 1))\n",
     "        critic_input = torch.cat((*obs, *act), dim=1)\n",
@@ -248,9 +250,9 @@
     "        cur_act_vf_in = gumbel_softmax(cur_actor_out)\n",
     "        all_actor_acs = []\n",
     "        for i, (pi, _obs) in enumerate(zip(self.policies, obs)):\n",
-    "            if i == i_agent:\n",
+    "            if i == i_agent:  # 如果当前循环对应当前agent，添加当前动作\n",
     "                all_actor_acs.append(cur_act_vf_in)\n",
-    "            else:\n",
+    "            else:  # 如果当前循环并不对应当前agent而是别的agent，用obs生成他们的动作，保存到一起\n",
     "                all_actor_acs.append(onehot_from_logits(pi(_obs)))\n",
     "        vf_in = torch.cat((*obs, *all_actor_acs), dim=1)\n",
     "        actor_loss = -cur_agent.critic(vf_in).mean()\n",
