--- a/强化学习笔记/12_PPO.ipynb
+++ b/强化学习笔记/12_PPO.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -27,7 +26,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -98,7 +96,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -127,7 +124,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -146,9 +142,19 @@
    "source": [
     "class PPO:\n",
     "    ''' PPO算法,采用截断方式 '''\n",
-    "    def __init__(self, state_dim: int, hidden_dim: int, action_dim: int, \n",
-    "                 actor_lr: float, critic_lr: float, gamma: float, lmbda: float, \n",
-    "                 epochs: int, eps: float, device: str):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        state_dim: int,\n",
+    "        hidden_dim: int,\n",
+    "        action_dim: int,\n",
+    "        actor_lr: float=1e-4,\n",
+    "        critic_lr: float=5e-3,\n",
+    "        gamma: float=0.9,\n",
+    "        lmbda: float=0.9,\n",
+    "        epochs: int=20,\n",
+    "        eps: float=0.2,\n",
+    "        device: str='cpu',\n",
+    "    ):\n",
     "        '''\n",
     "        `state_dim`: 状态空间大小\\\\\n",
     "        `hidden_dim`: 隐藏层神经元数量, 若要改隐藏层数量, 需要同步改网络\\\\\n",
@@ -217,7 +223,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ✅PPO裁剪原理 "
+    "# ✅PPO裁剪原理"
    ]
   },
   {
@@ -250,7 +256,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -270,7 +275,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "device: cuda\n"
+      "device: cpu\n"
      ]
     }
    ],
@@ -303,7 +308,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -346,6 +350,26 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.cuda.is_available()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {
     "notebookRunGroups": {
      "groupValue": "1"
@@ -353,12 +377,11 @@
    },
    "outputs": [],
    "source": [
-    "CKP_PATH = 'checkpoints/PPO_CPv1.pt'\n",
+    "CKP_PATH = 'checkpoints/debug/PPO_CPv1.pt'\n",
     "s_epoch, s_episode, return_list = read_ckp(CKP_PATH)"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -367,28 +390,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                                           "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "总耗时: 0分钟\n"
+      "<1/15>:   0%|          | 0/100 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r"
+      "                                                                                           \r"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Bowen\\Desktop\\ML_practice\\强化学习笔记\\12_PPO.ipynb 单元格 23\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Bowen/Desktop/ML_practice/%E5%BC%BA%E5%8C%96%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0/12_PPO.ipynb#X31sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m return_list \u001b[39m=\u001b[39m rl_utils\u001b[39m.\u001b[39mtrain_on_policy_agent(env, agent, s_epoch, total_epochs, s_episode, total_episodes, return_list, CKP_PATH)\n",
+      "File \u001b[1;32mc:\\Users\\Bowen\\Desktop\\ML_practice\\强化学习笔记\\rl_utils.py:88\u001b[0m, in \u001b[0;36mtrain_on_policy_agent\u001b[1;34m(env, agent, s_epoch, total_epochs, s_episode, total_episodes, return_list, ckp_path)\u001b[0m\n\u001b[0;32m     86\u001b[0m done \u001b[39m=\u001b[39m truncated \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n\u001b[0;32m     87\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mnot\u001b[39;00m (done \u001b[39m|\u001b[39m truncated):\n\u001b[1;32m---> 88\u001b[0m     action \u001b[39m=\u001b[39m agent\u001b[39m.\u001b[39mtake_action(state)\n\u001b[0;32m     89\u001b[0m     next_state, reward, done, truncated, _ \u001b[39m=\u001b[39m env\u001b[39m.\u001b[39mstep(action)\n\u001b[0;32m     90\u001b[0m     transition_dict[\u001b[39m'\u001b[39m\u001b[39mstates\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mappend(state)\n",
+      "\u001b[1;32mc:\\Users\\Bowen\\Desktop\\ML_practice\\强化学习笔记\\12_PPO.ipynb 单元格 23\u001b[0m line \u001b[0;36m4\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Bowen/Desktop/ML_practice/%E5%BC%BA%E5%8C%96%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0/12_PPO.ipynb#X31sZmlsZQ%3D%3D?line=38'>39</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mtake_action\u001b[39m(\u001b[39mself\u001b[39m, state) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mlist\u001b[39m:\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Bowen/Desktop/ML_practice/%E5%BC%BA%E5%8C%96%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0/12_PPO.ipynb#X31sZmlsZQ%3D%3D?line=39'>40</a>\u001b[0m     state \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mtensor(state[np\u001b[39m.\u001b[39mnewaxis, :], dtype\u001b[39m=\u001b[39mtorch\u001b[39m.\u001b[39mfloat)\u001b[39m.\u001b[39mto(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdevice)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Bowen/Desktop/ML_practice/%E5%BC%BA%E5%8C%96%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0/12_PPO.ipynb#X31sZmlsZQ%3D%3D?line=40'>41</a>\u001b[0m     probs \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mactor(state)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Bowen/Desktop/ML_practice/%E5%BC%BA%E5%8C%96%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0/12_PPO.ipynb#X31sZmlsZQ%3D%3D?line=41'>42</a>\u001b[0m     action_dist \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mdistributions\u001b[39m.\u001b[39mCategorical(probs)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Bowen/Desktop/ML_practice/%E5%BC%BA%E5%8C%96%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0/12_PPO.ipynb#X31sZmlsZQ%3D%3D?line=42'>43</a>\u001b[0m     action \u001b[39m=\u001b[39m action_dist\u001b[39m.\u001b[39msample()\n",
+      "File \u001b[1;32me:\\anaconda3\\Lib\\site-packages\\torch\\nn\\modules\\module.py:1518\u001b[0m, in \u001b[0;36mModule._wrapped_call_impl\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1516\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_compiled_call_impl(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)  \u001b[39m# type: ignore[misc]\u001b[39;00m\n\u001b[0;32m   1517\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m-> 1518\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_call_impl(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
+      "File \u001b[1;32me:\\anaconda3\\Lib\\site-packages\\torch\\nn\\modules\\module.py:1527\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1522\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[0;32m   1523\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[0;32m   1524\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_pre_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks\n\u001b[0;32m   1525\u001b[0m         \u001b[39mor\u001b[39;00m _global_backward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[0;32m   1526\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[1;32m-> 1527\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m   1529\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m   1530\u001b[0m     result \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n",
+      "\u001b[1;32mc:\\Users\\Bowen\\Desktop\\ML_practice\\强化学习笔记\\12_PPO.ipynb 单元格 23\u001b[0m line \u001b[0;36m8\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Bowen/Desktop/ML_practice/%E5%BC%BA%E5%8C%96%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0/12_PPO.ipynb#X31sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, x):\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Bowen/Desktop/ML_practice/%E5%BC%BA%E5%8C%96%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0/12_PPO.ipynb#X31sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     x \u001b[39m=\u001b[39m F\u001b[39m.\u001b[39mrelu(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfc1(x))\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Bowen/Desktop/ML_practice/%E5%BC%BA%E5%8C%96%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0/12_PPO.ipynb#X31sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m F\u001b[39m.\u001b[39msoftmax(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfc2(x), dim\u001b[39m=\u001b[39m\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\n",
+      "File \u001b[1;32me:\\anaconda3\\Lib\\site-packages\\torch\\nn\\modules\\module.py:1518\u001b[0m, in \u001b[0;36mModule._wrapped_call_impl\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1516\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_compiled_call_impl(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)  \u001b[39m# type: ignore[misc]\u001b[39;00m\n\u001b[0;32m   1517\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m-> 1518\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_call_impl(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
+      "File \u001b[1;32me:\\anaconda3\\Lib\\site-packages\\torch\\nn\\modules\\module.py:1527\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1522\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[0;32m   1523\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[0;32m   1524\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_pre_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks\n\u001b[0;32m   1525\u001b[0m         \u001b[39mor\u001b[39;00m _global_backward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[0;32m   1526\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[1;32m-> 1527\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m   1529\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m   1530\u001b[0m     result \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n",
+      "File \u001b[1;32me:\\anaconda3\\Lib\\site-packages\\torch\\nn\\modules\\linear.py:114\u001b[0m, in \u001b[0;36mLinear.forward\u001b[1;34m(self, input)\u001b[0m\n\u001b[0;32m    113\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39minput\u001b[39m: Tensor) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Tensor:\n\u001b[1;32m--> 114\u001b[0m     \u001b[39mreturn\u001b[39;00m F\u001b[39m.\u001b[39mlinear(\u001b[39minput\u001b[39m, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mweight, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbias)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -397,7 +432,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -477,9 +511,19 @@
    "source": [
     "class PPOcontinuous:\n",
     "    ''' PPO算法,采用截断方式 '''\n",
-    "    def __init__(self,state_dim: int, hidden_dim: int, action_dim: int, \n",
-    "                 actor_lr: float, critic_lr: float, gamma: float, lmbda: float, \n",
-    "                 epochs: int, eps: float, device: str):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        state_dim: int,\n",
+    "        hidden_dim: int,\n",
+    "        action_dim: int,\n",
+    "        actor_lr: float=1e-4,\n",
+    "        critic_lr: float=5e-3,\n",
+    "        gamma: float=0.9,\n",
+    "        lmbda: float=0.9,\n",
+    "        epochs: int=20,\n",
+    "        eps: float=0.2,\n",
+    "        device: str='cpu',\n",
+    "    ):\n",
     "        '''\n",
     "        `state_dim`: 状态空间大小\\\\\n",
     "        `hidden_dim`: 隐藏层神经元数量, 若要改隐藏层数量, 需要同步改网络\\\\\n",
@@ -511,18 +555,12 @@
     "        return [action.item()]\n",
     "\n",
     "    def update(self, transition_dict):\n",
-    "        states = torch.tensor(np.array(transition_dict['states']), \n",
-    "                              dtype=torch.float).to(self.device)\n",
-    "        actions = torch.tensor(np.array(transition_dict['actions']), \n",
-    "                                   dtype=torch.float).view(-1, 1).to(self.device)\n",
-    "        rewards = torch.tensor(np.array(transition_dict['rewards']), \n",
-    "                               dtype=torch.float).view(-1, 1).to(self.device)\n",
-    "        next_states = torch.tensor(np.array(transition_dict['next_states']), \n",
-    "                                   dtype=torch.float).to(self.device)\n",
-    "        dones = torch.tensor(np.array(transition_dict['dones']), \n",
-    "                             dtype=torch.int).view(-1, 1).to(self.device)\n",
-    "        truncated = torch.tensor(np.array(transition_dict['truncated']), \n",
-    "                                 dtype=torch.int).view(-1, 1).to(self.device)\n",
+    "        states = torch.tensor(np.array(transition_dict['states']), dtype=torch.float).to(self.device)\n",
+    "        actions = torch.tensor(np.array(transition_dict['actions']), dtype=torch.float).view(-1, 1).to(self.device)\n",
+    "        rewards = torch.tensor(np.array(transition_dict['rewards']), dtype=torch.float).view(-1, 1).to(self.device)\n",
+    "        next_states = torch.tensor(np.array(transition_dict['next_states']), dtype=torch.float).to(self.device)\n",
+    "        dones = torch.tensor(np.array(transition_dict['dones']), dtype=torch.int).view(-1, 1).to(self.device)\n",
+    "        truncated = torch.tensor(np.array(transition_dict['truncated']), dtype=torch.int).view(-1, 1).to(self.device)\n",
     "        \n",
     "        rewards = (rewards + 8.0) / 8.0  # 和TRPO一样, 对奖励进行修改, 方便训练\n",
     "        td_target = rewards + self.gamma * self.critic(next_states) * (1 - dones | truncated)\n",
