--- a/机器学习笔记/10_Keras人工神经网络.ipynb
+++ b/机器学习笔记/10_Keras人工神经网络.ipynb
@@ -445,7 +445,7 @@
    "id": "c3594cbb-5786-43d4-9b5b-84b539231caa",
    "metadata": {},
    "source": [
-    "```\n",
+    "```python\n",
     "model.compile(loss=keras.losses.sparse_categorical_crossentropy,\n",
     "              optimizer=keras.optimizers.SGD(),\n",
     "              metrics=[keras.metrics.sparse_categorical_accuracy])\n",
