--- a/强化学习笔记/09_策略梯度.ipynb
+++ b/强化学习笔记/09_策略梯度.ipynb
@@ -65,7 +65,8 @@
     "                 device):\n",
     "        self.policy_net = PolicyNet(state_dim, hidden_dim,\n",
     "                                    action_dim).to(device)\n",
-    "        self.optimizer = torch.optim.Adam(self.policy_net.parameters(), lr=learning_rate)  # 使用Adam优化器\n",
+    "        self.optimizer = torch.optim.Adam(self.policy_net.parameters(), \n",
+    "                                          lr=learning_rate)  # 使用Adam优化器\n",
     "        self.gamma = gamma  # 折扣因子\n",
     "        self.device = device\n",
     "    def take_action(self, state):  # 根据动作概率分布随机采样\n",
@@ -86,7 +87,8 @@
     "            reward = return_list[i]\n",
     "            state = torch.tensor(state_list[i], dtype=torch.float).to(self.device)\n",
     "            action = torch.tensor(action_list[i]).view(-1, 1).to(self.device)  # 选择当前步骤的动作\n",
-    "            log_prob = torch.log(self.policy_net(state.unsqueeze(0)).gather(1, action))  # 依据动作选概率, 对数化\n",
+    "            # 依据动作选概率, 对数化\n",
+    "            log_prob = torch.log(self.policy_net(state.unsqueeze(0)).gather(1, action))\n",
     "            G = self.gamma * G + reward\n",
     "            loss = -log_prob * G  # 每一步的损失函数\n",
     "            loss.backward()  # 反向传播计算梯度, 在循环中一直积累梯度\n",
@@ -139,7 +141,8 @@
     "action_dim = env.action_space.n\n",
     "device = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
     "\n",
-    "agent = REINFORCE(state_dim, hidden_dim, action_dim, learning_rate, gamma, device)"
+    "agent = REINFORCE(state_dim, hidden_dim, action_dim, \n",
+    "                  learning_rate, gamma, device)"
    ]
   },
   {
@@ -212,7 +215,8 @@
    ],
    "source": [
     "for epoch in range(s_epoch, total_epoch):\n",
-    "    with tqdm(total=(total_episode - s_episode), desc='<%d/%d>' % (epoch + 1, total_epoch), leave=False) as pbar:\n",
+    "    with tqdm(total=(total_episode - s_episode), desc='<%d/%d>' % (epoch + 1, total_epoch), \n",
+    "              leave=False) as pbar:\n",
     "        for episode in range(s_episode, total_episode):\n",
     "            episode_reward = 0\n",
     "            transition_dict = {\n",
