--- a/机器学习笔记/20_图神经网络.ipynb
+++ b/机器学习笔记/20_图神经网络.ipynb
@@ -46,8 +46,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
