--- a/机器学习笔记/20_图神经网络.ipynb
+++ b/机器学习笔记/20_图神经网络.ipynb
@@ -4,7 +4,514 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![attachment:image.png](https://pic3.zhimg.com/v2-625e7493b5470e774b5aa91fb4fdb9d2_r.jpg)"
+    "参考 [pyg文档](https://pytorch-geometric.readthedocs.io/en/latest/get_started/introduction.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 定义基本结构"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from torch_geometric.data import Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "edge_index 表明哪些节点朝哪些方向连接, 两个节点单向连接只需要写一组, 双向连接需要写两组，需要注意的是，无向图实际上是指节点都通过双向边连接，而不是只连接而没有方向。\n",
+    "\n",
+    "![](https://pytorch-geometric.readthedocs.io/en/latest/_images/graph.svg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edge_index = torch.tensor([[0, 1, 1, 2],\n",
+    "                           [1, 0, 2, 1]], dtype=torch.long)\n",
+    "\n",
+    "# 节点特征矩阵, 特征可以是任意维度张量, 但是 shape 要统一, 节点特征数可以多于节点数\n",
+    "x = torch.tensor([[-1], [0], [1]], dtype=torch.float)\n",
+    "\n",
+    "data = Data(x=x, edge_index=edge_index)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "edge_index 在定义时 shape 是 [2, \\*], 如果定义为 [\\*, 2] 则需要转置输入Data, 转置后还需深拷贝 `contiguous()`\n",
+    "\n",
+    "```python\n",
+    "edge_index = torch.tensor([[0, 1],\n",
+    "                           [1, 0],\n",
+    "                           [1, 2],\n",
+    "                           [2, 1]], dtype=torch.long)\n",
+    "x = torch.tensor([[-1], [0], [1]], dtype=torch.float)\n",
+    "\n",
+    "data = Data(x=x, edge_index=edge_index.t().contiguous())\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`edge_index()` 验证 data 是否有问题, 比如 edge_index 中连接了 4 个节点,  x 中就应该依次包括大于等于 4 个节点的特征."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.validate(raise_on_error=True)  # 验证数据是否有问题"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# data 属性"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.num_nodes  # 节点数, 如果存在孤立节点, 结果不一定正确, 可以手动指定"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.num_edges  # 边数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.num_node_features  # 节点特征数, 但是对高维特征识别似乎不正确"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.has_isolated_nodes()  # 是否有孤立节点"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.has_self_loops()  # 是否有自环边"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.is_directed()  # 是否有向图"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 标准数据集"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ENZYMES 蛋白酶数据"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch_geometric.datasets import TUDataset\n",
+    "\n",
+    "dataset = TUDataset(\"\", name='ENZYMES')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "600"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(dataset)  # 一共有600个图，每个图中包含若干节点"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.num_classes  # 一共有6个酶类别"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.num_node_labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.num_node_features  # 貌似不对"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = dataset[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.is_undirected()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 划分数据集\n",
+    "\n",
+    "这里就手动划分为9:1了，600*0.9=540"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = dataset.shuffle()  # 打乱数据集"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_dataset = dataset[:540]\n",
+    "test_dataset = dataset[540:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 图卷积神经网络"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cora 是引文数据集"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch_geometric.datasets import Planetoid\n",
+    "\n",
+    "dataset = Planetoid(\"\", name='Cora')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1433"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.num_node_features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.num_classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn.functional as F\n",
+    "from torch_geometric.nn import GCNConv\n",
+    "\n",
+    "class GCN(torch.nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.conv1 = GCNConv(dataset.num_node_features, 16)\n",
+    "        self.conv2 = GCNConv(16, dataset.num_classes)\n",
+    "\n",
+    "    def forward(self, data):\n",
+    "        x, edge_index = data.x, data.edge_index\n",
+    "\n",
+    "        x = self.conv1(x, edge_index)\n",
+    "        x = F.relu(x)\n",
+    "        x = F.dropout(x, training=self.training)\n",
+    "        x = self.conv2(x, edge_index)\n",
+    "\n",
+    "        return F.log_softmax(x, dim=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "model = GCN().to(device)\n",
+    "data = dataset[0].to(device)\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.01, weight_decay=5e-4)\n",
+    "\n",
+    "model.train()\n",
+    "for epoch in range(200):\n",
+    "    optimizer.zero_grad()\n",
+    "    out = model(data)\n",
+    "    loss = F.nll_loss(out[data.train_mask], data.y[data.train_mask])\n",
+    "    loss.backward()\n",
+    "    optimizer.step()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.8070\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.eval()\n",
+    "pred = model(data).argmax(dim=1)\n",
+    "correct = (pred[data.test_mask] == data.y[data.test_mask]).sum()\n",
+    "acc = int(correct) / int(data.test_mask.sum())\n",
+    "print(f'Accuracy: {acc:.4f}')"
    ]
   },
   {
@@ -12,37 +519,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import torch\n",
-    "from torch_geometric.nn import MessagePassing\n",
-    "from torch_geometric.utils import add_self_loops, degree\n",
-    "\n",
-    "class GCNConv(MessagePassing):\n",
-    "    def __init__(self, in_channels, out_channels):\n",
-    "        super(GCNConv, self).__init__(aggr='add')\n",
-    "        self.lin = torch.nn.Linear(in_channels, out_channels)\n",
-    "\n",
-    "    def forward(self, x, edge_index):\n",
-    "        # Step 1: Add self-loops\n",
-    "        edge_index, _ = add_self_loops(edge_index, num_nodes=x.size(0))\n",
-    "\n",
-    "        # Step 2: Multiply with weights\n",
-    "        x = self.lin(x)\n",
-    "\n",
-    "        # Step 3: Calculate the normalization\n",
-    "        row, col = edge_index\n",
-    "        deg = degree(row, x.size(0), dtype=x.dtype)\n",
-    "        deg_inv_sqrt = deg.pow(-0.5)\n",
-    "        norm = deg_inv_sqrt[row] * deg_inv_sqrt[col]\n",
-    "\n",
-    "        # Step 4: Propagate the embeddings to the next layer\n",
-    "        return self.propagate(edge_index, size=(x.size(0), x.size(0)), x=x,\n",
-    "                              norm=norm)\n",
-    "\n",
-    "    def message(self, x_j, norm):\n",
-    "        # Normalize node features.\n",
-    "        return norm.view(-1, 1) * x_j"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -52,7 +536,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.6"
   }
  },
