修改错别字

--- a/机器学习笔记/08_降维技术.ipynb
+++ b/机器学习笔记/08_降维技术.ipynb
@@ -975,7 +975,7 @@
    "id": "cd6be7f5",
    "metadata": {},
    "source": [
-    "流形(Manifold)是局部具有欧式空间性质的空间，包括各种纬度维度的曲线曲面，例如球体、弯曲的平面等，如瑞士卷，适合展开扭曲的流形，尤其在没有太多噪声的情况下"
+    "流形(Manifold)是局部具有欧式空间性质的空间，包括各种维度的曲线曲面，例如球体、弯曲的平面等，如瑞士卷，适合展开扭曲的流形，尤其在没有太多噪声的情况下"
    ]
   },
   {
